syntax = "proto3";

package model.boid;

import "common/rule.proto";

// each message gets its own class
option java_multiple_files = true;
// proper package name otherwise uses uu.boid
option java_package = "nl.uu.model.boid.data";

message LlmOutput {
  repeated Rule rules = 1;
  int32 user_id = 2;
}
